--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="gray_light">#aaaaaa</color>
     <color name="black">#212121</color>
     <color name="white_dark">#dddddd</color>
+
+    <color name="unselected_color">#33ffffff</color>
+    <color name="selected_color">@color/white</color>
 </resources>
